--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>Reserve</title>
   <base href="/">
-
+  <meta name="title" content="Sample Room Reservation System for Bitwise Industries using Angular2">
+  <meta name="author" content="J.R. Ruggiero">
+  <meta name="description" content="This is a sampling of a reservation system for the rooms at Bitwise Industries. This was built using the Angular CLI in Angular 2. It also demonstrates sending, receiving and modify a back-end database on firebase">
+  <meta name="keywords" content="J.R., Ruggiero, Bitwise, Geekwise, Angular2, firebase, reserve, database">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
